# moremo-aider-notebook

./: .env.example  .gitignore  README.md  example.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: compose.yaml  devcontainer.json
data/: test.csv
db/: test.db
