[project]
name = "moremo-aider-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "altair-viewer>=0.4.0",
    "marimo[sql]>=0.11.22",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.24",
    "ta>=0.11.0",
    "yfinance>=0.2.54",
]

[tool.marimo.datasources]
auto_discover_schemas = true   # Default: true
auto_discover_tables = true   # Default: false - enable for table auto-discovery
auto_discover_columns = true  # Default: false - enable for column auto-discovery
